--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "homepage": "https://github.com/VvasavV/frontend-project-lvl1#readme",
   "dependencies": {
     "readline-sync": "^1.4.10"
+  },
+  "devDependencies": {
+    "prettier": "^2.4.1"
   }
 }
