--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "readline-sync": "^1.4.10"
   },
   "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.24.2",
     "prettier": "^2.4.1"
   }
 }
